3 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<p>
-  Start editing to see some magic happen :)
-</p>
+<h1>Parent Component</h1>
+<app-child [loggedIn]="userLoggedIn"></app-child>
